--- a/progress-ring/example/index.html
+++ b/progress-ring/example/index.html
@@ -22,8 +22,8 @@
                 </svg>
             </div>
             <img class="panel-btn-main" src="./svg/play.svg">
-            <span class="panel-btn-title">歌曲名：Champions</span>
-            <span class="panel-btn-author">作者：Elektronomia</span>
+            <!-- <span class="panel-btn-title">歌曲名：Champions</span>
+            <span class="panel-btn-author">作者：Elektronomia</span> -->
         </div>
     </div>
 </body>
